frontend/test/should_fail/exectype_AssignSetmapEmptyToVar4.grg
using exectype;

rule r
{
	modify  {
		exec(y:map<AA,HH> =map<AA,HH> ;> b:int=y.empty());
	}
}